--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 title: Movies Updater
 show_downloads: true
+github:
+  exe_url: http://example.com/download.zip
+  another_url: another value
 google_analytics:
 theme: jekyll-theme-midnight
