--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Movies Updater
 show_downloads: true
 github:
   zip_url: http://example.com/download.zip
-  another_url: another value
+  exe_url: http://example.com/download.zip
 google_analytics:
 theme: jekyll-theme-midnight
