--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ github:
   zip_url: http://example.com/download.zip
   exe_url: http://example.com/download.zip
 google_analytics:
-theme: jekyll-theme-midnight
+theme: jekyll-theme-hacker
