--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Movies Updater
 show_downloads: true
 github:
-  zip_url: http://example.com/download.zip
+  zip_url: https://github.com/MasterZayaan/movies-updater/raw/main/versions/movies-updater-all-versions.zip
   exe_url: http://example.com/download.zip
 google_analytics:
 theme: jekyll-theme-hacker
