--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Movies Updater
 show_downloads: true
 github:
-  zip_url: https://github.com/MasterZayaan/movies-updater/raw/main/versions/movies-updater-all-versions.zip
+  zip_url: https://github.com/MasterZayaan/movies-updater/raw/main/versions/latest.exe
 google_analytics:
 theme: jekyll-theme-hacker
