--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Movies Updater
 show_downloads: true
 github:
-  zip_url: https://github.com/MasterZayaan/movies-updater/raw/main/versions/latest.exe
+  zip_url: https://https://masterzayaan.github.io/movies-updater/versions/latest.exe
 google_analytics:
 theme: jekyll-theme-hacker
